FIrework launcher image and basic typing logic

--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Astro Typing</title>
+    <title>Kata Kata Hanabi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       canvas {
         display: block;
-        width:85%;
         margin: 0 auto;
+      }
+      body {
+        margin: 0;
+        background: #0b1c2d;
       }
     </style>
     
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.min.js"></script>
-    <script defer src="astro_typing_game.js"></script>
+    <script defer src="kataKataHanabi.js"></script>
 </body>
 </html>
 
