--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@v3.90.0/dist/phaser.min.js"></script>
+    <script src="https://raw.githubusercontent.com/rexrainbow/phaser3-rex-notes/master/dist/rexbbcodetextplugin.min.js'"></script>
     <script defer src="kataKataHanabi.js"></script>
 </body>
 </html>
